# bg9x_ssl_zephyr

./: .gitignore  CMakeLists.txt  Kconfig  README.md  prj.conf
bg9x-ssl/zephyr/: CMakeLists.txt  Kconfig  bg9x_ssl.c
boards/: nrf52840dk_nrf52840.overlay
samples/azure_client/: CMakeLists.txt  README.rst  prj.conf
samples/azure_client/src/: main.c
samples/mosquitto_client/: CMakeLists.txt  README.rst  prj.conf
samples/mosquitto_client/src/: main.c
samples/simple_socket/: README.rst  example.pem  prj.conf
samples/simple_socket/src/: main.c
src/: bg9x_ssl.c  bg9x_ssl.h  main.c
zephyr/: CMakeLists.txt  Kconfig  bg9x_ssl.c  bg9x_ssl.h  module.yml
